--- a/src/static/styles/main.css
+++ b/src/static/styles/main.css
@@ -18,13 +18,57 @@
   }
 
   .panel-section{
-    width: 240px;
+    width: 480px;
     padding: 20px;
     background-color: #eee;
   }
 
   .code-generator-section{
     padding: 20px;
+  }
+
+  .type-group{
+    margin-bottom: 40px;
+  }
+
+  .group-title{
+    font-size: 16px;
+    margin-bottom: 8px;
+  }
+
+  .btn-group{
+    display: flex;
+  }
+
+  .btn{
+    position: relative;
+    display: inline-block;
+    padding: 6px 12px;
+    margin-bottom: 0;
+    font-weight: 400;
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+    background-image: none;
+    border: 1px solid #ddd;
+    background-color: #fff;
+    white-space: nowrap;
+    font-size: 14px;
+    line-height: 1.42857143;
+    border-radius: 5px;
+    user-select: none;
+    text-decoration: none;
+    color: #333;
+  }
+
+  .btn-group{
+    display: flex;
+    flex-wrap: wrap;
+    .btn{
+      text-align: left;
+      margin-bottom: 4px;
+      margin-right: 4px;
+    }
   }
 
 }
