finish msg/update toggleableBtn

--- a/src/static/styles/main.css
+++ b/src/static/styles/main.css
@@ -57,6 +57,11 @@
     user-select: none;
     text-decoration: none;
     color: #333;
+    &.enabled{
+      border: 1px solid #ccc;
+      background-color: #ddd;
+      color: #222;
+    }
   }
 
   .btn-group{
