add basic codesnippet layout

--- a/src/static/styles/main.css
+++ b/src/static/styles/main.css
@@ -74,4 +74,19 @@
     }
   }
 
+  .code-generator-section{
+    display: flex;
+    flex: 1;
+    padding: 20px;
+  }
+  .code-snippet{
+    flex: 1;
+    max-width: 100%;
+    height: 100%;
+    padding: 20px;
+    background-color: #eee;
+    resize: none;
+    border: 1px solid #ddd;
+  }
+
 }
