--- a/src/static/styles/main.css
+++ b/src/static/styles/main.css
@@ -84,7 +84,8 @@
     max-width: 100%;
     height: 100%;
     padding: 20px;
-    background-color: #eee;
+    background-color: #272822;
+    color: #fff;
     resize: none;
     border: 1px solid #ddd;
   }
